# meridian-public

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CANONICAL_RUNBOOK.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_INSTRUCTIONS.md  PROJECT_STATE.md  PUBLIC_MIRROR.md  README.md  SESSION_HANDOFF_BLOCK_TEMPLATE.md  pyproject.toml
.githooks/: pre-push
artifacts/: README.md
docs/: EXECUTION_BOUNDARY_MIGRATION.md  EXTERNAL_OPENCLAW_RESEARCH_DEPLOYMENT.md  MERIDIAN_HEALTH_ALERT_TRIAGE_FIX_WINDOW.md  MERIDIAN_LIVE_DELTA_AUTHORIZATION_WINDOW.md  MERIDIAN_MIGRATION_CLOSURE_HASH_MANIFEST.txt  MERIDIAN_MIGRATION_CLOSURE_SUMMARY.md  MERIDIAN_POSITION_REFERENCE_FIX_WINDOW.md  MERIDIAN_POST_ENTRY_SECOND_REVIEW_PROOF_DRIVER_FIX_WINDOW.md  MERIDIAN_PROOF_DRIVER_PRECHECK_WINDOW.md  MERIDIAN_REARM_APPLY_WINDOW.md  MERIDIAN_REMOTE_LIVE_STATE_2026_06_01.md  MERIDIAN_SECOND_STAGE_CLEANUP.md  MERIDIAN_TIMER_HANDOFF_APPLY_DECISION.md  MERIDIAN_TIMER_HANDOFF_CUTOVER_DESIGN_REVIEW.md  MERIDIAN_TIMER_HANDOFF_FIX_WINDOW.md  MINIMAL_MARKET_RESEARCH_WORKFLOW.md  OPERATOR_SOP.md  PROJECT_IDENTITY_MIGRATION.md  QUANT_RESEARCH_LAB.md  README_FOR_AGENT.md  REAL_PROVIDER_24H_ACCEPTANCE_BLOCKER_RUNBOOK.md  quant_agent_prompting.md
examples/: _canonical_demo_support.py  batch_pilot_runner_demo.py  governed_agent_ingress_demo.py  pilot_runner_demo.py  rulebook_agent_review_demo.py  runtime_batch_demo.py  runtime_demo.py  scenario_cases.py  snapshot_adapter_demo.py
scripts/: check_shadow_run.py  run_controlled_shadow_soak.py  run_shadow_24h.ps1  verify_shadow_ingestion_controller_boundary.py
(+1878 files in other folders)
